# ImpactPools

./: .gitignore  ARCHITECTURE.md  BLEND_INTEGRATION_STATUS.md  DEPLOYMENT.md  FUND_TESTNET_ACCOUNTS.md  PROJECT_DOCUMENTATION.md  README.md  SMART_CONTRACT_INTEGRATION.md  SMART_CONTRACT_TESTING.md  TESTING_GUIDE.md  package-lock.json  package.json  vercel.json
app-for-bg/: README.md
backend/: config.js  package-lock.json  package.json  pools-data.json  server.js
backend/routes/: nft.js  withdrawal.js
backend/services/: enhancedPoolService.js  milestoneService.js  nftService.js  yieldService.js
backend/utils/: certificateGenerator.js
contracts/: pool_contract.rs
contracts/impact_pool/: Cargo.toml
contracts/impact_pool/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/scripts/: copy-sargam-icons.cjs
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CursorEffects.jsx  CursorToggle.jsx  EnhancedCursor.jsx  FreighterDebug.jsx  MilestoneTracker.jsx  NFTCertificate.jsx  NFTGallery.jsx  Navbar.jsx  PoolHealthIndicator.jsx  SargamIcon.jsx  WithdrawalDemo.jsx
frontend/src/contexts/: PoolContext.jsx  WalletContext.jsx
frontend/src/hooks/: useNFTMilestones.js
frontend/src/pages/: CreatePoolPage.jsx  HomePage.jsx  NFTGalleryPage.jsx  PoolDetailsPage.jsx
frontend/src/services/: blendIntegrationService.js  blendIntegrationTest.js  blendService.js  nftService.js  onChainBalanceTest.js  realBlendService.js  (+4 more)
scripts/: deploy-contracts.sh  fund-testnet-accounts.js  start-dev.js
(+1 files in other folders)
